Reduce memory allocations in QNMinimizer